# wrlc_idp

./: .gitignore  Dockerfile  config.py  docker-compose.yml  pyproject.toml  requirements.txt  template.env  update.sh
.github/: dependabot.yml
app/: __init__.py
app/models/: username_util.py
app/templates/security/email/: change_notice.html  reset_instructions.html  reset_notice.html
etc/systemd/system/: wrlcidp.service
log/: README.md
