[tool.poetry]
name = "wrlc-idp"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
argon2-cffi = "^23.1.0"
argon2-cffi-bindings = "^21.2.0"
attrs = "^25.1.0"
bcrypt = "^4.2.0"
bleach = "^6.2.0"
blinker = "^1.8.2"
certifi = "^2025.1.31"
cffi = "^1.17.1"
click = "^8.1.7"
cryptography = "^44.0.0"
defusedxml = "^0.7.1"
dnspython = "^2.7.0"
email-validator = "^2.2.0"
flask = "^3.0.3"
flask-login = "^0.6.3"
flask-mailman = "^1.1.1"
flask-principal = "^0.4.0"
flask-security-too = "^5.5.2"
flask-sqlalchemy = "^3.1.1"
flask-wtf = "^1.2.2"
greenlet = "^3.1.1"
gunicorn = "^23.0.0"
idna = "^3.10"
importlib-resources = "^6.4.5"
iso8601 = "^2.1.0"
itsdangerous = "^2.2.0"
jinja2 = "^3.1.5"
lxml = "^5.3.0"
markupsafe = "^3.0.2"
packaging = "^25.0"
passlib = "^1.7.4"
pycparser = "^2.22"
pymysql = "^1.1.1"
pyopenssl = "^25.0.0"
pytz = "^2025.1"
signxml = "^4.0.2"
six = "^1.16.0"
sqlalchemy = "^2.0.36"
sqlalchemy-utils = "^0.41.2"
typing-extensions = "^4.12.2"
webencodings = "^0.5.1"
werkzeug = "^3.1.2"
wtforms = "^3.2.1"
flask-saml2-fork = {git = "https://github.com/WRLC/flask-saml2.git", rev = "635709e59f03269bbe31bf624f028454895c48f1"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
